# sanez_visualizer

./: .env.example  .gitignore  CLAUDE.md  CURL_TESTS.md  Dockerfile  Makefile  README.md  TEST_SUMMARY.md  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_endpoints.http
app/: bootstrap.py  config.py  db.py  dependencies.py  factory.py  scheduler.py  templates.py
app/models/: __init__.py  category.py  exchange_rate.py  item.py  user.py
app/routers/: admin.py  helpers.py  public.py  superadmin.py
app/security/: csrf.py  passwords.py  rate_limit.py
app/services/: __init__.py  category.py  image_gen.py  item.py  menu.py  rates.py  upload.py  user.py
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_category_precio_modo.py  b2c3d4e5f6a7_list_style_and_item_details.py  ffe850e05b77_baseline_schema.py
scrapers/: bcv.py  tasks.py
scripts/: migrate_to_multitenant.py  test_api.sh
templates/: admin.html  login.html  public.html
templates/admin/: dashboard.html
templates/super/: user_form.html  users_list.html
tests/: conftest.py  helpers.py  test_admin_routes.py  test_auth_routes.py  test_category_service.py  test_image_gen.py  test_menu_service.py  test_public_routes.py  test_super_routes.py
