[project]
name = "sanez-visualizer"
version = "1.0.0"
description = "Cartelera digital multi-tenant (FastAPI + SQLite)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "Jinja2>=3.1",
    "bcrypt>=4.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools]
py-modules = ["main"]
packages = ["app", "app.models", "app.security", "app.services", "app.routers", "scrapers"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI usa llamadas (Depends/Form/File/Query) en los defaults por diseño.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Query",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
